# django-helpdesk

./: .gitignore  Dockerfile  README.md  chat.html  chat_test.html  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini
helpdesk/: asgi.py  settings.py  settings_prod.py  test_settings.py  urls.py
support/: admin.py  api.py  apps.py  consumers.py  middleware.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
support/migrations/: 0001_initial.py  0002_alter_supportmessage_options_and_more.py  0002_alter_supportrequest_updated_at.py  0003_alter_supportrequest_options_and_more.py
